syntax = "proto3";

package authentication;

//interface between auth service and user service to insert auth credentials to database
service Authentication {

    rpc SetAuthentication (AuthenticationRequest) returns (AuthenticationReply) {
    }

}

//service types enum
enum ServiceType {
    GITHUB = 0;
    DROPBOX = 1;
    BITBUCKET = 2;
    GOOGLE = 3;
    SLACK = 4;
}

message AuthenticationRequest {
    ServiceType service = 1;
    string username = 2;
    string access_token = 3;
    string refresh_token = 4;
}


message AuthenticationReply {
    string status = 1;
    string err = 2;
}

